--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--background-color);
+  color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  /* Light mode variables */
+  --primary-color: #d9d9d9;
+  --text-color: #292929;
+  --background-color: linear-gradient(
+    91deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(94, 94, 94, 1) 99%
+  );
+  --card-background: #ffffff;
+  --border-color: #e0e0e0;
+}
+
+[data-theme="dark"] {
+  /* Dark mode variables */
+  --primary-color: #404040;
+  --text-color: #ffffff;
+  --background-color: #444444;
 }
